src/objects/Book_Order__c.object
<CustomObject>
    <description>A simplified order object used by Book Warehouse Solutions</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The Contact that this order belongs to.</description>
        <inlineHelpText>The Contact that this order belongs to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>The Order Status field indicates the status of the Book Order - New, Ordered, or Shipped.</description>
        <inlineHelpText>The Order Status field indicates the status of the Book Order - New, Ordered, or Shipped.</inlineHelpText>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backordered</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>The sum of the Extended Price for all Line Items on this Book Order.</description>
        <inlineHelpText>The sum of the Extended Price for all Line Items on this Book Order.</inlineHelpText>
        <label>Total Cost</label>
        <summarizedField>Line_Item__c.Extended_Price__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Book_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Book Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>